--- a/package.json
+++ b/package.json
@@ -1,5 +1,9 @@
 {
   "dependencies": {
     "socket.io": "^3.1.1"
+  },
+  "devDependencies": {
+    "@types/node": "12",
+    "typescript": "^4.1.4"
   }
 }
