--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
   "dependencies": {
+    "express": "^4.17.1",
     "socket.io": "^3.1.1"
   },
   "devDependencies": {
+    "@types/express": "^4.17.11",
     "@types/node": "12",
     "typescript": "^4.1.4"
   }
