--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "devDependencies": {
     "@types/express": "^4.17.11",
     "@types/node": "12",
-    "typescript": "^4.1.4"
+    "typescript": "^4.1.4",
+    "webpack": "^5.24.2",
+    "webpack-cli": "^4.5.0"
   }
 }
