--- a/package.json
+++ b/package.json
@@ -1,4 +1,8 @@
 {
+  "scripts": {
+    "build": "webpack",
+    "watch": "webpack -w"
+  },
   "dependencies": {
     "express": "^4.17.1",
     "socket.io": "^3.1.1"
@@ -6,8 +10,10 @@
   "devDependencies": {
     "@types/express": "^4.17.11",
     "@types/node": "12",
+    "ts-loader": "^8.0.17",
     "typescript": "^4.1.4",
     "webpack": "^5.24.2",
-    "webpack-cli": "^4.5.0"
+    "webpack-cli": "^4.5.0",
+    "webpack-node-externals": "^2.5.2"
   }
 }
