--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "devDependencies": {
     "@types/express": "^4.17.11",
     "@types/node": "12",
+    "@types/socket.io-client": "^1.4.35",
     "ts-loader": "^8.0.17",
     "typescript": "^4.1.4",
     "webpack": "^5.24.2",
