--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   },
   "dependencies": {
     "express": "^4.17.1",
-    "socket.io": "^3.1.1"
+    "socket.io": "^3.1.1",
+    "socket.io-client": "^3.1.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.11",
